Bug 397151 - 'Tea is ready since X seconds' notification doesn't show up after fist tea run
Summary: 'Tea is ready since X seconds' notification doesn't show up after fist tea run
Status: RESOLVED FIXED
Alias: None
Product: kteatime
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Stefan Böhmann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-04 14:03 UTC by Unknown
Modified: 2021-12-09 16:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Unknown 2018-08-04 14:03:17 UTC
If the popup and reminder option in the settings window is enabled, the popup doesn't show up when running another tea, but only with the first tea.

int m_nextNotificationTime running with old value from the previous run
Comment 1 Albert Astals Cid 2018-08-08 21:20:45 UTC
Git commit 5dd5301b9052fa99058137bbf8bc3415636aeac2 by Albert Astals Cid, on behalf of Fabio Bolz.
Committed on 08/08/2018 at 21:20.
Pushed by aacid into branch 'Applications/18.08'.

Fix no tea is ready notification after second run

Reviewers: aacid

Subscribers: kde-utils-devel

Differential Revision: https://phabricator.kde.org/D14602

M  +1    -0    src/toplevel.cpp

https://commits.kde.org/kteatime/5dd5301b9052fa99058137bbf8bc3415636aeac2
Comment 2 Albert Astals Cid 2021-12-09 16:29:33 UTC
Git commit a9564efa7ae7095e4d3cb9522d971ff441149906 by Albert Astals Cid, on behalf of Fabio Bolz.
Committed on 08/08/2018 at 21:19.
Pushed by aacid into branch 'arcpatch-D14602'.

Fix no tea is ready notification after second run

Summary: BUG: 397151

Reviewers: aacid

Subscribers: kde-utils-devel

Differential Revision: https://phabricator.kde.org/D14602

M  +1    -0    src/toplevel.cpp

https://invent.kde.org/utilities/kteatime/commit/a9564efa7ae7095e4d3cb9522d971ff441149906