Fix no tea is ready notification after second run

BUG: 397151

Reviewers: aacid

Subscribers: kde-utils-devel

Differential Revision: https://phabricator.kde.org/D14602